Fixed search box alignment

--- a/css/q-a-plus.css
+++ b/css/q-a-plus.css
@@ -38,7 +38,11 @@
 	margin: 10px 0 0;
 }
 
+#qaplus_searchform {
+	margin-bottom: 20px;
+}
+
 .qaplus_search {
 	width: 50%;
-	margin: 0 10px 20px 0;
+	margin: 0 10px 0 0;
 }
